Agregado de footer desktop

--- a/dolcevita.html
+++ b/dolcevita.html
@@ -74,27 +74,54 @@
     <div class="textos-dolcecel">
         <!-- ------------------------------- TITULO -------------------------------- -->
         <h1 class="tittle-dolcecel">Dolce vita</h1>
-                <!-- ------------------------------- TITULO -------------------------------- -->
-                <!-- -------------------------------- TEXTO -------------------------------- -->
-        <p class="parrafo-dolcecel">Es una pasión que nace a fines de 2019, inspirada en la pureza, magia e inocenciad de la niñez. Esta marca está destinada a vestir pequeñas princesas, desde su nacimiento hasta su adolescencia.</p>
-            <!-- -------------------------------- TEXTO -------------------------------- -->
-            <!-- -------------------------------- TEXTO -------------------------------- -->
-        <p class="parrafo-dolcecel">La colección presenta confecciones de piezas exclusivas y diseños innovadores de Alta Costura, incorporando moda y tendencia actual, con la impronta de su diseñadora que lo hace original y diferente.</p>
-            <!-- -------------------------------- TEXTO -------------------------------- -->
-            <!-- --------------------------- BOTON PRODUCTOS --------------------------- -->
+        <!-- ------------------------------- TITULO -------------------------------- -->
+        <!-- -------------------------------- TEXTO -------------------------------- -->
+        <p class="parrafo-dolcecel">Es una pasión que nace a fines de 2019, inspirada en la pureza, magia e inocenciad
+            de la niñez. Esta marca está destinada a vestir pequeñas princesas, desde su nacimiento hasta su
+            adolescencia.</p>
+        <!-- -------------------------------- TEXTO -------------------------------- -->
+        <!-- -------------------------------- TEXTO -------------------------------- -->
+        <p class="parrafo-dolcecel">La colección presenta confecciones de piezas exclusivas y diseños innovadores de
+            Alta Costura, incorporando moda y tendencia actual, con la impronta de su diseñadora que lo hace original y
+            diferente.</p>
+        <!-- -------------------------------- TEXTO -------------------------------- -->
+        <!-- --------------------------- BOTON PRODUCTOS --------------------------- -->
         <div class="btn-divcel">
-                <!-- -------------------------- ENLACE PRODUCTOS --------------------------- -->
-                <a href="https://wa.me/5492964523259?text=¡Me%20interesa%20el%20vestido!" target="_blank"><input type="submit" value="Nuestros productos" class="btn-reservacel"></a>
-                <!-- -------------------------- ENLACE PRODUCTOS --------------------------- -->
+            <!-- -------------------------- ENLACE PRODUCTOS --------------------------- -->
+            <a href="https://wa.me/5492964523259?text=¡Me%20interesa%20el%20vestido!" target="_blank"><input
+                    type="submit" value="Nuestros productos" class="btn-reservacel"></a>
+            <!-- -------------------------- ENLACE PRODUCTOS --------------------------- -->
         </div>
         <!-- --------------------------- BOTON PRODUCTOS --------------------------- -->
     </div>
+    <footer>
+        <section class="footerstyle-paginas">
+            <div class="contenedor_logos">
+                <h3>Seguinos</h3>
+                <div class="logos2">
+                    <a href="https://www.instagram.com/dolce_vitaprincesas/" target="_blank"><i
+                            class="fa-brands fa-instagram"></i></a>
+                    <a href="https://www.facebook.com/dolcevitaprincesas/" target="_blank"><i
+                            class="fa-brands fa-facebook"></i></a>
+                </div>
+            </div>
+            <section class="contenedor_imgs">
+                <img src="../assets/correoargentino.png" alt="imgCorreo">
+                <p><b>Envios a todo el país</b></p>
+                <img src="../assets/Vector.png" alt="imgCard">
+                <p><b>Todos los medios de pago</b></p>
+            </section>
+    </footer>
+            <!-- ----------------------------- FONTAWESOME ----------------------------- -->
+            <script src="https://kit.fontawesome.com/4946a7d77f.js" crossorigin="anonymous"></script>
+            <!-- ----------------------------- FONTAWESOME ----------------------------- -->
     <!-- ------------------------------ ICON-WSP ------------------------------- -->
     <a href="https://api.whatsapp.com/send?phone=5491167647633&text=Hola,%20quiero%20hacer%20una%20consulta"
         class="btn-wsp" target="_blank">
         <i class="icon-whatsapp"></i>
     </a>
     <!-- ------------------------------ ICON WSP ------------------------------- -->
+
     <!-- ------------------------------ BOOTSTRAP ------------------------------ -->
     <!-- JavaScript Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
