--- a/materiales.html
+++ b/materiales.html
@@ -74,23 +74,45 @@
     <div class="textos-materialescel">
         <!-- ------------------------------- TITULO -------------------------------- -->
         <h1 class="tittle-materialescel">Nuestros Materiales</h1>
-                <!-- ------------------------------- TITULO -------------------------------- -->
-                <!-- -------------------------------- TEXTO -------------------------------- -->
+        <!-- ------------------------------- TITULO -------------------------------- -->
+        <!-- -------------------------------- TEXTO -------------------------------- -->
         <p class="parrafo-materialescel">Realizamos una eleccion exhaustiva de nuestras telas, priorizando la
             calidad y el detalle</p>
-            <!-- -------------------------------- TEXTO -------------------------------- -->
-            <!-- -------------------------------- TEXTO -------------------------------- -->
+        <!-- -------------------------------- TEXTO -------------------------------- -->
+        <!-- -------------------------------- TEXTO -------------------------------- -->
         <p class="parrafo-materialescel">Uso de telas de fiesta, saten, taftan, tules bordados con flores, perlas,
             apliques, raso de novias, encaje de novias, entre otras.</p>
-            <!-- -------------------------------- TEXTO -------------------------------- -->
-            <!-- --------------------------- BOTON PRODUCTOS --------------------------- -->
+        <!-- -------------------------------- TEXTO -------------------------------- -->
+        <!-- --------------------------- BOTON PRODUCTOS --------------------------- -->
         <div class="btn-divcel">
-                <!-- -------------------------- ENLACE PRODUCTOS --------------------------- -->
-                <a href="https://wa.me/5492964523259?text=¡Me%20interesa%20el%20vestido!" target="_blank"><input type="submit" value="Nuestros productos" class="btn-reservacel"></a>
-                <!-- -------------------------- ENLACE PRODUCTOS --------------------------- -->
+            <!-- -------------------------- ENLACE PRODUCTOS --------------------------- -->
+            <a href="https://wa.me/5492964523259?text=¡Me%20interesa%20el%20vestido!" target="_blank"><input
+                    type="submit" value="Nuestros productos" class="btn-reservacel"></a>
+            <!-- -------------------------- ENLACE PRODUCTOS --------------------------- -->
         </div>
         <!-- --------------------------- BOTON PRODUCTOS --------------------------- -->
     </div>
+    <footer>
+        <section class="footerstyle-paginas">
+            <div class="contenedor_logos">
+                <h3>Seguinos</h3>
+                <div class="logos2">
+                    <a href="https://www.instagram.com/dolce_vitaprincesas/" target="_blank"><i
+                            class="fa-brands fa-instagram"></i></a>
+                    <a href="https://www.facebook.com/dolcevitaprincesas/" target="_blank"><i
+                            class="fa-brands fa-facebook"></i></a>
+                </div>
+            </div>
+            <section class="contenedor_imgs">
+                <img src="../assets/correoargentino.png" alt="imgCorreo">
+                <p><b>Envios a todo el país</b></p>
+                <img src="../assets/Vector.png" alt="imgCard">
+                <p><b>Todos los medios de pago</b></p>
+            </section>
+    </footer>
+            <!-- ----------------------------- FONTAWESOME ----------------------------- -->
+            <script src="https://kit.fontawesome.com/4946a7d77f.js" crossorigin="anonymous"></script>
+            <!-- ----------------------------- FONTAWESOME ----------------------------- -->
     <!-- ------------------------------ ICON-WSP ------------------------------- -->
     <a href="https://api.whatsapp.com/send?phone=5491167647633&text=Hola,%20quiero%20hacer%20una%20consulta"
         class="btn-wsp" target="_blank">
@@ -103,6 +125,7 @@
         integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous">
     </script>
     <!-- ------------------------------ BOOTSTRAP ------------------------------ -->
+
 </body>
 
 </html>
