--- a/quienesomos.html
+++ b/quienesomos.html
@@ -91,6 +91,27 @@
         </div>
         <!-- --------------------------- BOTON PRODUCTOS --------------------------- -->
     </div>
+    <footer>
+        <section class="footerstyle-paginas">
+            <div class="contenedor_logos">
+                <h3>Seguinos</h3>
+                <div class="logos2">
+                    <a href="https://www.instagram.com/dolce_vitaprincesas/" target="_blank"><i
+                            class="fa-brands fa-instagram"></i></a>
+                    <a href="https://www.facebook.com/dolcevitaprincesas/" target="_blank"><i
+                            class="fa-brands fa-facebook"></i></a>
+                </div>
+            </div>
+            <section class="contenedor_imgs">
+                <img src="../assets/correoargentino.png" alt="imgCorreo">
+                <p><b>Envios a todo el país</b></p>
+                <img src="../assets/Vector.png" alt="imgCard">
+                <p><b>Todos los medios de pago</b></p>
+            </section>
+    </footer>
+            <!-- ----------------------------- FONTAWESOME ----------------------------- -->
+            <script src="https://kit.fontawesome.com/4946a7d77f.js" crossorigin="anonymous"></script>
+            <!-- ----------------------------- FONTAWESOME ----------------------------- -->
     <!-- ------------------------------ ICON-WSP ------------------------------- -->
     <a href="https://api.whatsapp.com/send?phone=5491167647633&text=Hola,%20quiero%20hacer%20una%20consulta"
         class="btn-wsp" target="_blank">
