--- a/vestidos.html
+++ b/vestidos.html
@@ -78,7 +78,8 @@
                     </div>
                 </div>
                 <div class="input-Box5">
-                    <a href="https://wa.me/5492964523259?text=¡Me%20interesa%20el%20vestido!" target="_blank"><input type="submit" value="Consultar Stock" class="btn-stock"></a>
+                    <a href="https://wa.me/5492964523259?text=¡Me%20interesa%20el%20vestido!" target="_blank"><input
+                            type="submit" value="Consultar Stock" class="btn-stock"></a>
                 </div>
             </div>
             <div class="col">
@@ -90,7 +91,8 @@
                     </div>
                 </div>
                 <div class="input-Box5">
-                    <a href="https://wa.me/5492964523259?text=¡Me%20interesa%20el%20vestido!" target="_blank"><input type="submit" value="Consultar Stock" class="btn-stock"></a>
+                    <a href="https://wa.me/5492964523259?text=¡Me%20interesa%20el%20vestido!" target="_blank"><input
+                            type="submit" value="Consultar Stock" class="btn-stock"></a>
                 </div>
             </div>
             <div class="col">
@@ -102,7 +104,8 @@
                     </div>
                 </div>
                 <div class="input-Box5">
-                    <a href="https://wa.me/5492964523259?text=¡Me%20interesa%20el%20vestido!" target="_blank"><input type="submit" value="Consultar Stock" class="btn-stock"></a>
+                    <a href="https://wa.me/5492964523259?text=¡Me%20interesa%20el%20vestido!" target="_blank"><input
+                            type="submit" value="Consultar Stock" class="btn-stock"></a>
                 </div>
             </div>
             <div class="col">
@@ -114,7 +117,8 @@
                     </div>
                 </div>
                 <div class="input-Box5">
-                    <a href="https://wa.me/5492964523259?text=¡Me%20interesa%20el%20vestido!" target="_blank"><input type="submit" value="Consultar Stock" class="btn-stock"></a>
+                    <a href="https://wa.me/5492964523259?text=¡Me%20interesa%20el%20vestido!" target="_blank"><input
+                            type="submit" value="Consultar Stock" class="btn-stock"></a>
                 </div>
             </div>
             <div class="col">
@@ -126,7 +130,8 @@
                     </div>
                 </div>
                 <div class="input-Box5">
-                    <a href="https://wa.me/5492964523259?text=¡Me%20interesa%20el%20vestido!" target="_blank"><input type="submit" value="Consultar Stock" class="btn-stock"></a>
+                    <a href="https://wa.me/5492964523259?text=¡Me%20interesa%20el%20vestido!" target="_blank"><input
+                            type="submit" value="Consultar Stock" class="btn-stock"></a>
                 </div>
             </div>
             <div class="col">
@@ -138,7 +143,8 @@
                     </div>
                 </div>
                 <div class="input-Box5">
-                    <a href="https://wa.me/5492964523259?text=¡Me%20interesa%20el%20vestido!" target="_blank"><input type="submit" value="Consultar Stock" class="btn-stock"></a>
+                    <a href="https://wa.me/5492964523259?text=¡Me%20interesa%20el%20vestido!" target="_blank"><input
+                            type="submit" value="Consultar Stock" class="btn-stock"></a>
                 </div>
             </div>
             <div class="col">
@@ -150,7 +156,8 @@
                     </div>
                 </div>
                 <div class="input-Box5">
-                    <a href="https://wa.me/5492964523259?text=¡Me%20interesa%20el%20vestido!" target="_blank"><input type="submit" value="Consultar Stock" class="btn-stock"></a>
+                    <a href="https://wa.me/5492964523259?text=¡Me%20interesa%20el%20vestido!" target="_blank"><input
+                            type="submit" value="Consultar Stock" class="btn-stock"></a>
                 </div>
             </div>
             <div class="col">
@@ -158,11 +165,13 @@
                     <img src="../assets/martina.png" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title"><b>MARTINA</b></h5>
-                        <p class="card-text">Color manteca, realizado en su totalida con micro tul, forrado con saten.</p>
+                        <p class="card-text">Color manteca, realizado en su totalida con micro tul, forrado con saten.
+                        </p>
                     </div>
                 </div>
                 <div class="input-Box5">
-                    <a href="https://wa.me/5492964523259?text=¡Me%20interesa%20el%20vestido!" target="_blank"><input type="submit" value="Consultar Stock" class="btn-stock"></a>
+                    <a href="https://wa.me/5492964523259?text=¡Me%20interesa%20el%20vestido!" target="_blank"><input
+                            type="submit" value="Consultar Stock" class="btn-stock"></a>
                 </div>
             </div>
             <div class="col">
@@ -174,7 +183,8 @@
                     </div>
                 </div>
                 <div class="input-Box5">
-                    <a href="https://wa.me/5492964523259?text=¡Me%20interesa%20el%20vestido!" target="_blank"><input type="submit" value="Consultar Stock" class="btn-stock"></a>
+                    <a href="https://wa.me/5492964523259?text=¡Me%20interesa%20el%20vestido!" target="_blank"><input
+                            type="submit" value="Consultar Stock" class="btn-stock"></a>
                 </div>
             </div>
             <div class="col">
@@ -186,15 +196,35 @@
                     </div>
                 </div>
                 <div class="input-Box5">
-                    <a href="https://wa.me/5492964523259?text=¡Me%20interesa%20el%20vestido!" target="_blank"><input type="submit" value="Consultar Stock" class="btn-stock"></a>
+                    <a href="https://wa.me/5492964523259?text=¡Me%20interesa%20el%20vestido!" target="_blank"><input
+                            type="submit" value="Consultar Stock" class="btn-stock"></a>
                 </div>
             </div>
         </div>
-
     </main>
+    <footer>
+        <section class="footerstyle">
+            <div class="contenedor_logos">
+                <h3>Seguinos</h3>
+                <div class="logos2">
+                    <a href="https://www.instagram.com/dolce_vitaprincesas/" target="_blank"><i
+                            class="fa-brands fa-instagram"></i></a>
+                    <a href="https://www.facebook.com/dolcevitaprincesas/" target="_blank"><i
+                            class="fa-brands fa-facebook"></i></a>
+                </div>
+            </div>
+            <section class="contenedor_imgs">
+                <img src="../assets/correoargentino.png" alt="imgCorreo">
+                <p><b>Envios a todo el país</b></p>
+                <img src="../assets/Vector.png" alt="imgCard">
+                <p><b>Todos los medios de pago</b></p>
+            </section>
+    </footer>
+    <!-- ----------------------------- FONTAWESOME ----------------------------- -->
+    <script src="https://kit.fontawesome.com/4946a7d77f.js" crossorigin="anonymous"></script>
+    <!-- ----------------------------- FONTAWESOME ----------------------------- -->
     <!-- ------------------------------ ICON-WSP ------------------------------- -->
-    <a href="https://wa.me/5492964523259?text=¡Me%20interesa%20el%20vestido!"
-        class="btn-wsp" target="_blank">
+    <a href="https://wa.me/5492964523259?text=¡Me%20interesa%20el%20vestido!" class="btn-wsp" target="_blank">
         <i class="icon-whatsapp"></i>
     </a>
     <!-- ------------------------------ ICON-WSP ------------------------------- -->
