Footer de todas las paginas (pc,tel)

--- a/quienesomos.html
+++ b/quienesomos.html
@@ -92,7 +92,7 @@
         <!-- --------------------------- BOTON PRODUCTOS --------------------------- -->
     </div>
     <footer>
-        <section class="footerstyle-paginas">
+        <section class="footerstyle-quienes">
             <div class="contenedor_logos">
                 <h3>Seguinos</h3>
                 <div class="logos2">
