--- a/dolcevita.html
+++ b/dolcevita.html
@@ -95,7 +95,7 @@
         <!-- --------------------------- BOTON PRODUCTOS --------------------------- -->
     </div>
     <footer>
-        <section class="footerstyle-paginas">
+        <section class="footerstyle-dolce">
             <div class="contenedor_logos">
                 <h3>Seguinos</h3>
                 <div class="logos2">
