--- a/materiales.html
+++ b/materiales.html
@@ -93,7 +93,7 @@
         <!-- --------------------------- BOTON PRODUCTOS --------------------------- -->
     </div>
     <footer>
-        <section class="footerstyle-paginas">
+        <section class="footerstyle-materiales">
             <div class="contenedor_logos">
                 <h3>Seguinos</h3>
                 <div class="logos2">
