Arreglo de rutas

--- a/quienesomos.html
+++ b/quienesomos.html
@@ -103,9 +103,9 @@
                 </div>
             </div>
             <section class="contenedor_imgs">
-                <img src="../assets/correoargentino.png" alt="imgCorreo">
+                <img src="./assets/correoargentino.png" alt="imgCorreo">
                 <p><b>Envios a todo el país</b></p>
-                <img src="../assets/Vector.png" alt="imgCard">
+                <img src= "./assets/Vector.png" alt="imgCard">
                 <p><b>Todos los medios de pago</b></p>
             </section>
     </footer>
