--- a/vestidos.html
+++ b/vestidos.html
@@ -71,7 +71,7 @@
         <div class="row row-cols-1 row-cols-md-3 g-5">
             <div class="col">
                 <div class="card">
-                    <img src="../assets/princesaGlamour.png" class="card-img-top1" alt="...">
+                    <img src="./assets/princesaGlamour.png" class="card-img-top1" alt="...">
                     <div class="card-body">
                         <h5 class="card-title"><b>PRINCESA GLAMOUR</b></h5>
                         <p class="card-text">Vestido realizado en tul bordado color natural.</p>
@@ -84,7 +84,7 @@
             </div>
             <div class="col">
                 <div class="card">
-                    <img src="../assets/olivia.png" class="card-img-top" alt="...">
+                    <img src="./assets/olivia.png" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title"><b>OLIVIA</b></h5>
                         <p class="card-text">Pechera realizada en tul bordado, forrado en satén blanco.</p>
@@ -97,7 +97,7 @@
             </div>
             <div class="col">
                 <div class="card">
-                    <img src="../assets/happybirth.png" class="card-img-top" alt="...">
+                    <img src="./assets/happybirth.png" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title"><b>TUTU HAPPY BIRTHDAY</b></h5>
                         <p class="card-text">Pechera lisa, mangas tul bordado con terminación, falda en raso.</p>
@@ -110,7 +110,7 @@
             </div>
             <div class="col">
                 <div class="card">
-                    <img src="../assets/giuliana.png" class="card-img-top" alt="...">
+                    <img src="./assets/giuliana.png" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title"><b>GIULIANA</b></h5>
                         <p class="card-text">Vestido realizado en tul bordado color natural.</p>
@@ -123,7 +123,7 @@
             </div>
             <div class="col">
                 <div class="card">
-                    <img src="../assets/isabella.png" class="card-img-top" alt="...">
+                    <img src="./assets/isabella.png" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title"><b>ISABELLA</b></h5>
                         <p class="card-text">Pechera lisa, mangas tul bordado con terminación, falda en raso.</p>
@@ -136,7 +136,7 @@
             </div>
             <div class="col">
                 <div class="card">
-                    <img src="../assets/luz.png" class="card-img-top" alt="...">
+                    <img src="./assets/luz.png" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title"><b>LUZ</b></h5>
                         <p class="card-text">Pechera lisa, mangas tul bordado con terminación, falda en raso.</p>
@@ -149,7 +149,7 @@
             </div>
             <div class="col">
                 <div class="card">
-                    <img src="../assets/maria.png" class="card-img-top" alt="...">
+                    <img src="./assets/maria.png" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title"><b>MARIA</b></h5>
                         <p class="card-text">Pechera realizada en tul bordado, forrado en saten blanco.</p>
@@ -162,7 +162,7 @@
             </div>
             <div class="col">
                 <div class="card">
-                    <img src="../assets/martina.png" class="card-img-top" alt="...">
+                    <img src="./assets/martina.png" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title"><b>MARTINA</b></h5>
                         <p class="card-text">Color manteca, realizado en su totalida con micro tul, forrado con saten.
@@ -176,7 +176,7 @@
             </div>
             <div class="col">
                 <div class="card">
-                    <img src="../assets/perla.png" class="card-img-top" alt="...">
+                    <img src="./assets/perla.png" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title"><b>PERLA</b></h5>
                         <p class="card-text">Pechera realizada en tul con perlas</p>
@@ -189,7 +189,7 @@
             </div>
             <div class="col">
                 <div class="card">
-                    <img src="../assets/zara.png" class="card-img-top" alt="...">
+                    <img src="./assets/zara.png" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title"><b>ZARA</b></h5>
                         <p class="card-text">Pechera en tul bordado, forrado en su interior, sin mangas.</p>
@@ -214,9 +214,9 @@
                 </div>
             </div>
             <section class="contenedor_imgs">
-                <img src="../assets/correoargentino.png" alt="imgCorreo">
+                <img src="./assets/correoargentino.png" alt="imgCorreo">
                 <p><b>Envios a todo el país</b></p>
-                <img src="../assets/Vector.png" alt="imgCard">
+                <img src="./assets/Vector.png" alt="imgCard">
                 <p><b>Todos los medios de pago</b></p>
             </section>
     </footer>
