Correccion de fotos

--- a/talles.html
+++ b/talles.html
@@ -116,7 +116,7 @@
 
     <section>
         <div class="imagentalles">
-            <img src="./assets/imagentalles.jpeg" alt="">
+            <img src="./assets/imagentalles.png" alt="">
         </div>
     </section>
 
