Cambio en la imagen

--- a/talles.html
+++ b/talles.html
@@ -55,7 +55,7 @@
             <p>36cm</p>
             </div>
             <div class="div_imgtalles">
-                <img src="./assets/womantalles.jpeg" alt="">
+                <img src="./assets/Frame.png" alt="">
             </div>
         </div>
         <div class="contenedor_hr0">
