Cambios en la ruta

--- a/vestidos.html
+++ b/vestidos.html
@@ -74,7 +74,7 @@
                     <img src="./assets/princesaGlamour.png" class="card-img-top1" alt="...">
                     <div class="card-body">
                         <h5 class="card-title"><b>PRINCESA GLAMOUR</b></h5>
-                        <p class="card-text">Vestido realizado en tul bordado color natural.<br><a href="./talles.html" class="ver-talles">Ver talles</a></p>
+                        <p class="card-text">Vestido realizado en tul bordado color natural.<br><a href="talles.html" class="ver-talles">Ver talles</a></p>
                     </div>
                 </div>
                 <div class="input-Box5">
@@ -87,7 +87,7 @@
                     <img src="./assets/olivia.png" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title"><b>OLIVIA</b></h5>
-                        <p class="card-text">Pechera realizada en tul bordado, forrado en satén blanco.<br> <a href="./talles.html" class="ver-talles">Ver talles</a></p>
+                        <p class="card-text">Pechera realizada en tul bordado, forrado en satén blanco.<br> <a href="talles.html" class="ver-talles">Ver talles</a></p>
                     </div>
                 </div>
                 <div class="input-Box5">
@@ -100,7 +100,7 @@
                     <img src="./assets/happybirth.png" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title"><b>TUTU HAPPY BIRTHDAY</b></h5>
-                        <p class="card-text">Pechera lisa, mangas tul bordado con terminación, falda en raso. <br><a href="./talles.html" class="ver-talles">Ver talles</a></p>
+                        <p class="card-text">Pechera lisa, mangas tul bordado con terminación, falda en raso. <br><a href="talles.html" class="ver-talles">Ver talles</a></p>
                     </div>
                 </div>
                 <div class="input-Box5">
@@ -113,7 +113,7 @@
                     <img src="./assets/giuliana.png" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title"><b>GIULIANA</b></h5>
-                        <p class="card-text">Vestido realizado en tul bordado color natural. <br><a href="./talles.html" class="ver-talles">Ver talles</a></p>
+                        <p class="card-text">Vestido realizado en tul bordado color natural. <br><a href="talles.html" class="ver-talles">Ver talles</a></p>
                     </div>
                 </div>
                 <div class="input-Box5">
@@ -126,7 +126,7 @@
                     <img src="./assets/isabella.png" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title"><b>ISABELLA</b></h5>
-                        <p class="card-text">Pechera lisa, mangas tul bordado con terminación, falda en raso. <br><a href="./talles.html" class="ver-talles">Ver talles</a></p>
+                        <p class="card-text">Pechera lisa, mangas tul bordado con terminación, falda en raso. <br><a href="talles.html" class="ver-talles">Ver talles</a></p>
                     </div>
                 </div>
                 <div class="input-Box5">
@@ -139,7 +139,7 @@
                     <img src="./assets/luz.png" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title"><b>LUZ</b></h5>
-                        <p class="card-text">Pechera lisa, mangas tul bordado con terminación, falda en raso. <br><a href="./talles.html" class="ver-talles">Ver talles</a></p>
+                        <p class="card-text">Pechera lisa, mangas tul bordado con terminación, falda en raso. <br><a href="talles.html" class="ver-talles">Ver talles</a></p>
                     </div>
                 </div>
                 <div class="input-Box5">
@@ -152,7 +152,7 @@
                     <img src="./assets/maria.png" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title"><b>MARIA</b></h5>
-                        <p class="card-text">Pechera realizada en tul bordado, forrado en saten blanco.<br> <a href="./talles.html" class="ver-talles">Ver talles</a></p>
+                        <p class="card-text">Pechera realizada en tul bordado, forrado en saten blanco.<br> <a href="talles.html" class="ver-talles">Ver talles</a></p>
                     </div>
                 </div>
                 <div class="input-Box5">
@@ -165,7 +165,7 @@
                     <img src="./assets/martina.png" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title"><b>MARTINA</b></h5>
-                        <p class="card-text">Color manteca, realizado en su totalida con micro tul, forrado con saten. <br><a href="./talles.html" class="ver-talles">Ver talles</a>
+                        <p class="card-text">Color manteca, realizado en su totalida con micro tul, forrado con saten. <br><a href="talles.html" class="ver-talles">Ver talles</a>
                         </p>
                     </div>
                 </div>
@@ -179,7 +179,7 @@
                     <img src="./assets/perla.png" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title"><b>PERLA</b></h5>
-                        <p class="card-text">Pechera realizada en tul con perlas.<br> <a href="./talles.html" class="ver-talles">Ver talles</a></p>
+                        <p class="card-text">Pechera realizada en tul con perlas.<br> <a href="talles.html" class="ver-talles">Ver talles</a></p>
                     </div>
                 </div>
                 <div class="input-Box5">
@@ -192,7 +192,7 @@
                     <img src="./assets/zara.png" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title"><b>ZARA</b></h5>
-                        <p class="card-text">Pechera en tul bordado, forrado en su interior, sin mangas. <br><a href="./talles.html" class="ver-talles">Ver talles</a></p>
+                        <p class="card-text">Pechera en tul bordado, forrado en su interior, sin mangas. <br><a href="talles.html" class="ver-talles">Ver talles</a></p>
                     </div>
                 </div>
                 <div class="input-Box5">
